# Algorithmic-and-Programming

2cource/Fraction/: CMakeLists.txt  main.cpp
2cource/Paravozik/: CMakeLists.txt  main.cpp
2cource/PhoneBook/: CMakeLists.txt
2cource/VectorTriangle/: CMakeLists.txt  main.cpp
2cource/fromVB/: CMakeLists.txt  main3_1.cpp
2cource/sort3num/: main.cpp
2cource/triangle/triangle/Debug/triangle.tlog/: link.command.1.tlog
3cource/Practic1/: CMakeLists.txt  database.txt  main.cpp
3cource/Practic2/: CMakeLists.txt  main.cpp
3cource/Practic5/: CMakeLists.txt  main.cpp
3cource/Practic6/: CMakeLists.txt  main.cpp
Fraction/: main.cpp
Paravozik/: CMakeLists.txt  main.cpp
PhoneBook/: main.cpp
VectorTriangle/: main.cpp
fromVB/: main.cpp  main3.cpp
sort3num/: CMakeLists.txt
triangle/: triangle.sln
triangle/Debug/: triangle.ilk
triangle/triangle/: Source.cpp  triangle.vcxproj
triangle/triangle/Debug/: vc140.idb
triangle/triangle/Debug/triangle.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.read.1.tlog  link.write.1.tlog  triangle.lastbuildstate
